--- a/vignettes/statistical_analysis.Rmd
+++ b/vignettes/statistical_analysis.Rmd
@@ -28,28 +28,28 @@ knitr::opts_chunk$set(
 )
 ```
 
-## **Data preparation**
+# **Data preparation**
 
-Now the positive mode and negative mode have been annotated respectively. Now we need to merge positive and negative mode data.
+Now the positive mode and negative mode have been annotated respectively. We need to merge positive and negative mode data.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 library(tidymass)
 library(tidyverse)
 ```
 
-### Load data
+## Load data
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 load("metabolite_annotation/object_pos2")
 load("metabolite_annotation/object_neg2")
 ```
 
-### Remove the features without annotations
+## Remove the features without annotations
 
-Positive mode.
+### Positive mode
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
-object_pos2 = 
+object_pos2 <- 
   object_pos2 %>% 
   activate_mass_dataset(what = "annotation_table") %>% 
   filter(!is.na(Level)) %>% 
@@ -60,10 +60,10 @@ object_pos2 =
 object_pos2
 ```
 
-Negative mode.
+### Negative mode
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
-object_neg2 = 
+object_neg2 <- 
   object_neg2 %>% 
   activate_mass_dataset(what = "annotation_table") %>% 
   filter(!is.na(Level)) %>% 
@@ -74,10 +74,9 @@ object_neg2 =
 object_neg2
 ```
 
-### Merge data
+## Merge data
 
-We need to merge positive and negative mode data as one dataset.
-
+We need to merge positive and negative mode data as one `mass_dataset` class.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 head(colnames(object_pos2))
@@ -89,7 +88,7 @@ head(colnames(object_neg2))
 ```
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
-object = 
+object <- 
 merge_mass_dataset(x = object_pos2, 
                    y = object_neg2, 
                    sample_direction = "inner",
@@ -102,7 +101,7 @@ merge_mass_dataset(x = object_pos2,
 object
 ```
 
-## **Trace processing information of object**
+# **Trace processing information of object**
 
 Then we can use the `report_parameters()` function to trace processing information of object.
 
@@ -120,7 +119,7 @@ A html format file named as `parameter_report.html` will be generated.
 
 ![](figures/Screen-Shot-9.png)
 
-## **Remove redundant metabolites**
+# **Remove redundant metabolites**
 
 Remove the redundant annotated metabolites bases on `Level` and score.
 
@@ -134,7 +133,6 @@ object <-
   slice_head(n = 1)
 ```
 
-
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 object <-
   object %>% 
@@ -145,7 +143,7 @@ object <-
   slice_head(n = 1)
 ```
 
-## **Differential expression metabolites**
+# **Differential expression metabolites**
 
 Calculate the fold changes.
 
@@ -185,7 +183,6 @@ object <-
   )
 ```
 
-
 Volcano plot.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
@@ -196,7 +193,7 @@ volcano_plot(object = object,
   scale_size_continuous(range = c(0.5, 5))
 ```
 
-## **Output result**
+# **Output result**
 
 Output the differential expression metabolites.
 
@@ -210,13 +207,13 @@ readr::write_csv(differential_metabolites,
                  file = "statiscal_analysis/differential_metabolites.csv")
 ```
 
-Save result for next analysis.
+Save result for subsequent analysis.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 save(object, file = "statiscal_analysis/object")
 ```
 
-## **Session information**
+# **Session information**
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 sessionInfo()
