--- a/vignettes/data_convert.Rmd
+++ b/vignettes/data_convert.Rmd
@@ -28,54 +28,30 @@ knitr::opts_chunk$set(
 )
 ```
 
----
+# **Data preparation**
 
-## **Data preparation**
+Please place the raw data in one folder according to MS1 and MS2. Then you can convert them using `Proteowizard` or `massconverter` package.
 
----
+# **Proteowizard**
 
-Please place the raw data in one folder according to MS1 and MS2.
-
----
-
-## **Proteowizard**
-
----
-
-#### Convert MS1 data to `mzXML` format data
+## Convert MS1 data to `mzXML` format data
 
 Just convert data into `mzXML` format data according to the parameters below:
 
 ![](../man/figures/Screen Shot 2022-01-13 at 12.06.14 AM.png)
-
-
-#### Convert MS2 data to `mzXML` or `mgf` format data
+## Convert MS2 data to `mzXML` or `mgf` format data
 
 Just convert data into `mzXML` or `mgf` format data according to the parameters below:
 
 ![](../man/figures/Screen Shot 2022-01-13 at 12.09.12 AM.png)
 
----
+# **Convert data using `massconverter`**
 
-## **Convert data using `massconverter`**
+`massconverter` is a package in `tidymass` project which can be used to convert mass spectrometry raw data based on docker image of [`pwid`](https://hub.docker.com/r/chambm/pwiz-skyline-i-agree-to-the-vendor-licenses). See more information [here](https://tidymass.github.io/massconverter/).
 
----
+More inforamtion can be found [here](https://tidymass.github.io/massconverter/articles/convert_data.html).
 
-`massconverter` is a pacakge in `tidymass` which can be used to convert mass spectrometry raw data based on docker image of pwid. See more information [here](https://tidymass.github.io/massconverter/).
-
-#### Convert data to `mzXML` format data
-
-We use the demo data to show how to use `massconverter`.
-
-Download the data and put them your working directory and uncompress it.
-
-#### Convert data to `mgf` format data
-
----
-
-## **Session information**
-
----
+# **Session information**
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
 sessionInfo()
