--- a/vignettes/metabolite_annotation.Rmd
+++ b/vignettes/metabolite_annotation.Rmd
@@ -38,7 +38,7 @@ load("data_cleaning/POS/object_pos2")
 load("data_cleaning/NEG/object_neg2")
 ```
 
-# **Add MS2 spectra to object**
+# **Add MS2 spectra data to `mass_dataset` class**
 
 Download the [MS2 data here](https://drive.google.com/file/d/1FY3x7q5i1g3oSLaVej__ZaZ4XSX-mWBQ/view?usp=sharing).
 
@@ -46,7 +46,7 @@ Uncompress it.
 
 ![](figures/Screen-Shot-7.png)
 
-### Positive mode
+## Positive mode
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 object_pos2 <-
@@ -69,7 +69,7 @@ extract_ms2_data(object_pos2)
 ```
 
 
-### Negative mode
+## Negative mode
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 object_neg2 <-
@@ -91,14 +91,13 @@ object_neg2
 extract_ms2_data(object_neg2)
 ```
 
-
 # **Metabolite annotation**
 
 Metabolite annotation is based on the [`metid` package](https://tidymass.github.io/metid/).
 
 ## Download database
 
-We need to download MS2 database from `metid` [website](https://tidymass.github.io/metid/articles/public_databases.html).
+We need to download MS2 database from [`metid` website](https://tidymass.github.io/metid/articles/public_databases.html).
 
 Here we download the `Michael Snyder RPLC databases`, `Orbitrap database` and `MoNA database`. And place them in a new folder named as `metabolite_annotation`.
 
@@ -106,7 +105,7 @@ Here we download the `Michael Snyder RPLC databases`, `Orbitrap database` and `M
 
 ## Positive mode
 
-Annotation features using `snyder_database_rplc0.0.3`.
+### Annotate features using `snyder_database_rplc0.0.3`.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 load("metabolite_annotation/snyder_database_rplc0.0.3.rda")
@@ -114,7 +113,7 @@ snyder_database_rplc0.0.3
 ```
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
-object_pos2 = 
+object_pos2 <-
   annotate_metabolites_mass_dataset(object = object_pos2, 
                                     ms1.match.ppm = 15, 
                                     rt.match.tol = 30, 
@@ -126,9 +125,7 @@ object_pos2 =
 head(extract_annotation_table(object_pos2))
 ```
 
-
-
-Annotation features using `orbitrap_database0.0.3`.
+### Annotate features using `orbitrap_database0.0.3`.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 load("metabolite_annotation/orbitrap_database0.0.3.rda")
@@ -136,14 +133,14 @@ orbitrap_database0.0.3
 ```
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
-object_pos2 = 
+object_pos2 <- 
   annotate_metabolites_mass_dataset(object = object_pos2, 
                                     ms1.match.ppm = 15, 
                                     polarity = "positive",
                                     database = orbitrap_database0.0.3)
 ```
 
-Annotation features using `mona_database0.0.3`.
+### Annotate features using `mona_database0.0.3`.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 load("metabolite_annotation/mona_database0.0.3.rda")
@@ -151,21 +148,19 @@ orbitrap_database0.0.3
 ```
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
-object_pos2 = 
+object_pos2 <- 
   annotate_metabolites_mass_dataset(object = object_pos2, 
                                     ms1.match.ppm = 15, 
                                     polarity = "positive",
                                     database = mona_database0.0.3)
 ```
 
-
-
 ## Negative mode
 
-Annotation features using `snyder_database_rplc0.0.3`.
+### Annotate features using `snyder_database_rplc0.0.3`.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
-object_neg2 = 
+object_neg2 <- 
   annotate_metabolites_mass_dataset(object = object_neg2, 
                                     ms1.match.ppm = 15, 
                                     rt.match.tol = 30,
@@ -177,22 +172,20 @@ object_neg2 =
 head(extract_annotation_table(object_neg2))
 ```
 
-
-
-Annotation features using `orbitrap_database0.0.3`.
+### Annotate features using `orbitrap_database0.0.3`.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
-object_neg2 = 
+object_neg2 <- 
   annotate_metabolites_mass_dataset(object = object_neg2, 
                                     ms1.match.ppm = 15, 
                                     polarity = "negative",
                                     database = orbitrap_database0.0.3)
 ```
 
-Annotation features using `mona_database0.0.3`.
+### Annotate features using `mona_database0.0.3`.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
-object_neg2 = 
+object_neg2 <- 
   annotate_metabolites_mass_dataset(object = object_neg2, 
                                     ms1.match.ppm = 15, 
                                     polarity = "negative",
@@ -200,20 +193,32 @@ object_neg2 =
 ```
 
 
-## Annotation information
+## Annotation result
+
+The annotation result will assign into `mass_dataset` class as the `annotation_table` slot.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 head(extract_annotation_table(object = object_pos2))
 ```
 
+```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
+variable_info_pos <- 
+extract_variable_info(object = object_pos2)
+```
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
-variable_info_pos = 
-extract_variable_info(object = object_pos2)
 head(variable_info_pos)
+```
+
+```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 table(variable_info_pos$Level)
+```
+
+```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 table(variable_info_pos$Database)
 ```
+
+Use the `ms2_plot_mass_dataset()` function to get the MS2 matching plot.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 ms2_plot_mass_dataset(object = object_pos2, 
@@ -235,14 +240,12 @@ ms2_plot_mass_dataset(object = object_pos2,
                       interactive_plot = FALSE)
 ```
 
-Save data for next analysis.
+Save data for subsequent analysis.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 save(object_pos2, file = "metabolite_annotation/object_pos2")
 save(object_neg2, file = "metabolite_annotation/object_neg2")
 ```
-
-
 
 # **Session information**
 
