--- a/vignettes/raw_data_processing.Rmd
+++ b/vignettes/raw_data_processing.Rmd
@@ -29,27 +29,24 @@ knitr::opts_chunk$set(
 ```
 
 
-***
-
-## **Data preparation**
+# **Data preparation**
 
 Download the demo data and [refer this article](https://tidymass.github.io/tidymass/articles/demo_data.html).
 
-We have positive and negative mode. For each mode, we have control, case and QC groups. Control group have 110 samples, and case group have 110 samples as well.
+We have positive and negative mode. For each mode, we have `control`, `case` and `QC` groups. Control group have 110 samples, and case group have 110 samples as well.
 
 ![](figures/Screen-Shot-2022-01-13-at-10.33.07-PM.png)
 
-
-## **Positive mode**
+# **Positive mode**
 
 `massprocesser` package is used to do the raw data processing. Please refer this [website](file:///Users/xiaotaoshen/tidymass/massprocesser/docs/index.html).
 
-#### Code
+## Code
 
 The code used to do raw data processing.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
-library(massprocesser)
+library(tidymass)
 ```
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 process_data(
@@ -66,21 +63,20 @@ process_data(
 )
 ```
 
-#### Results
+## Results
 
-All the results will be placed in the folder `"mzxml_ms1_data/POS/Result"`. More information about that can be found [here](https://tidymass.github.io/massprocesser/articles/raw_data_processing.html).
+All the results will be placed in the folder `mzxml_ms1_data/POS/Result`. More information can be found [here](https://tidymass.github.io/massprocesser/articles/raw_data_processing.html).
 
 ![](figures/Screen-Shot-2.png)
 
 You can just load the `object`, which is a `mass_dataset` class object.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
-library(massdataset)
 load("mzxml_ms1_data/POS/Result/object")
 object
 ```
 
-We can see that there are 10149 metabolic features in positive mode.
+We can see that there are 10,149 metabolic features in positive mode.
 
 ![](figures/Screen-Shot.png)
 
@@ -88,7 +84,7 @@ You can use the `plot_adjusted_rt()` function to get the interactive plot.
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=TRUE, cache=TRUE}
 load("mzxml_ms1_data/POS/Result/intermediate_data/xdata2")
-####set the group_for_figure if you want to show specific groups. And set it as "all" if you want to show all samples.
+##set the group_for_figure if you want to show specific groups. And set it as "all" if you want to show all samples.
 plot = 
 massprocesser::plot_adjusted_rt(object = xdata2, 
                  group_for_figure = "QC", 
@@ -96,11 +92,11 @@ massprocesser::plot_adjusted_rt(object = xdata2,
 plot
 ```
 
-## **Negative mode**
+# **Negative mode**
 
 The processing of negative mode is same with positive mode data.
 
-#### Code
+## Code
 
 Same with positive mode, change `polarity` to `negative`.
 
@@ -119,7 +115,7 @@ massprocesser::process_data(
 )
 ```
 
-#### Results
+## Results
 
 Same with positive mode.
 
@@ -128,9 +124,9 @@ load("mzxml_ms1_data/NEG/Result/object")
 object
 ```
 
-We can see that there are 8804 metabolic features in negative mode.
+We can see that there are 8,804 metabolic features in negative mode.
 
-## **Session information**
+# **Session information**
 
 ```{r,eval=TRUE,warning=FALSE, R.options="", message=FALSE, cache=TRUE}
 sessionInfo()
